fixed i line breaks in list view

--- a/resources/assets/sass/components/_app.scss
+++ b/resources/assets/sass/components/_app.scss
@@ -42,7 +42,6 @@ tr.collapsible-tr-header {
   i {
     width: inherit;
     line-height: inherit;
-    display: inherit;
     float: inherit;
     text-align: inherit;
     margin-right: inherit;
