--- a/resources/assets/sass/components_dark/_app.scss
+++ b/resources/assets/sass/components_dark/_app.scss
@@ -62,7 +62,6 @@ tr.collapsible-tr-header {
   i {
     width: inherit;
     line-height: inherit;
-    display: inherit;
     float: inherit;
     text-align: inherit;
     margin-right: inherit;
